fixed errors and  css change

--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -1,5 +1,5 @@
 .home {
-  background-color: #030b6b;
+  background-color: #330C2F;
   min-height: 100vh;
 
   & nav {
@@ -44,7 +44,8 @@
   }
 }
 .hero-image {
-  width: 50%;
+  width:50%;
+  
 }
 @media screen and (max-width: 600px) {
   .hero {
