--- a/frontend/src/pages/auth/auth.module.scss
+++ b/frontend/src/pages/auth/auth.module.scss
@@ -27,10 +27,11 @@
         padding: 1rem;
         margin: 1rem auto;
         width: 100%;
-        border: 1px solid #ccc;
-        border-bottom: 3px solid #ccc;
+        border: 1px solid #7067cf;
+        border-bottom: 3px solid #7067cf;
         border-radius: 3px;
         outline: none;
+        background-color:#7067cf;
 
         &:focus {
           outline: none;
