--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,11 +15,11 @@
   --box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
 
   --color-purple: #9d0191;
-  --color-orange: #ff7722;
+  --color-orange: #ff8811;
 
   --color-primary: #007bff;
   --color-success: #28a745;
-  --color-danger: orangered;
+  --color-danger: red;
 }
 
 * {
@@ -197,7 +197,7 @@ p {
   color: #007bff;
 }
 .--color-danger {
-  color: orangered;
+  color: red;
 }
 .--color-success {
   color: #28a745;
@@ -319,7 +319,7 @@ p {
 
 .--btn-primary {
   color: #fff;
-  background: #007bff;
+  background: #7B287D;
 }
 .--btn-secondary {
   color: #fff;
